EPBDS-16415 Use standard layouts for built-in demo projects